[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/tool/BezierCurve.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/Technology/TechnologyData.gd" type="Script" id=2]
[ext_resource path="res://script/Technology/MainPanel.gd" type="Script" id=3]
[ext_resource path="res://images/styleboxflat/blue.tres" type="StyleBox" id=4]

[node name="TechnologyTree" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThreeTree" type="HBoxContainer" parent="BaseContainer"]
margin_right = 1080.0
margin_bottom = 507.0
size_flags_vertical = 3

[node name="Descent" type="VBoxContainer" parent="BaseContainer/ThreeTree"]
margin_right = 357.0
margin_bottom = 507.0
size_flags_horizontal = 7
alignment = 1

[node name="Science" type="VBoxContainer" parent="BaseContainer/ThreeTree"]
margin_left = 361.0
margin_right = 718.0
margin_bottom = 507.0
size_flags_horizontal = 7
alignment = 1

[node name="Magic" type="VBoxContainer" parent="BaseContainer/ThreeTree"]
margin_left = 722.0
margin_right = 1080.0
margin_bottom = 507.0
size_flags_horizontal = 7
alignment = 1

[node name="HSeparator" type="HSeparator" parent="BaseContainer"]
margin_top = 511.0
margin_right = 1080.0
margin_bottom = 516.0
rect_min_size = Vector2( 0, 5 )

[node name="SelectedPanel" type="CenterContainer" parent="BaseContainer"]
margin_top = 520.0
margin_right = 1080.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3

[node name="SelectedGridPanel" type="GridContainer" parent="BaseContainer/SelectedPanel"]
margin_left = 540.0
margin_top = 100.0
margin_right = 540.0
margin_bottom = 100.0
custom_constants/vseparation = 15
custom_constants/hseparation = 40
columns = 5

[node name="BezierCurve" parent="." instance=ExtResource( 1 )]

[node name="TechnologyData" type="Button" parent="."]
anchor_left = 0.858331
anchor_top = 0.842279
anchor_right = 0.898436
anchor_bottom = 0.885798
margin_right = 112.0
margin_bottom = 68.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
text = "end"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="pressed" from="TechnologyData" to="TechnologyData" method="_on_TechnologyData_pressed"]
